<resources>
    <string name="app_name">DJI Mobile Bridge</string>
    <string name="action_settings">Settings</string>
    <string name="disconnected">Disconnected</string>
    <string name="product_information">Product Information</string>
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="sdk_version">DJI SDK Version: %1$s</string>

    <string name="component_listview_health_information">Device Health Information</string>
    <string name="popup_picker_trigger">Trigger</string>
    <string name="component_listview_live_stream">Live Stream</string>
    <string name="success">Success</string>
    <string name="rtmp_edit_hint">RTMP Server URI</string>
    <string name="button_connect">CONNECT</string>
    <string name="product_name_default">No Product Connected</string>
    <string name="product_status_default">Unconnected</string>
    <string name="firmware_default_text">Firmware version: N/A</string>
    <string name="sdk_default_text">DJI SDK version: N/A</string>
    <string name="button_stop_livestream">STOP LIVESTREAM</string>
    <string name="text_cadit_iot_centre">CAD-IT IoT Centre</string>
    <string name="button_check_livestream">Is Livestream On</string>
    <string name="button_show_ifno">Show Livestream Info</string>
    <string name="ip_address_edit_hint">IP Address for MQTT and RTMP</string>
    <string name="mqtt_username_edit_hint">MQTT Username (optional)</string>
    <string name="mqtt_password_edit_hint">MQTT Password (optional)</string>
    <string name="button_start_livestream">START LIVESTREAM</string>
    <string name="button_stop_obstacle">STOP OBSTACLE MEASUREMENTS</string>
    <string name="button_start_control">START FLIGHT CONTROL</string>
    <string name="button_stop_control">STOP FLIGHT CONTROL</string>
    <string name="product_name_unknown">Unknown DJI Product</string>
    <string name="button_disconnect">DISCONNECT</string>
    <string name="button_check_status">CHECK STATUS</string>
    <string name="flight_mode_format">Flight mode: %1$s</string>
    <string name="rtmp_server_preinput">rtmp://</string>
</resources>