<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:keepScreenOn="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp"
        tools:context=".HomeActivity">


        <TextView
            android:id="@+id/text_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/product_name_default"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_product_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/product_status_default"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_product_name" />

        <EditText
            android:id="@+id/edit_text_rtmp_server"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/primary_text_input"
            android:ems="10"
            android:hint="@string/rtmp_edit_hint"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/rtmp_server_preinput"
            android:textColor="@color/black"
            android:textColorHighlight="@color/purple_500"
            android:textColorLink="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_product_status" />

        <EditText
            android:id="@+id/edit_text_mqtt_broker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/primary_text_input"
            android:ems="10"
            android:hint="@string/mqtt_broker_edit_hint"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/purple_500"
            android:textColorLink="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_rtmp_server" />

        <EditText
            android:id="@+id/edit_text_mqtt_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/primary_text_input"
            android:ems="10"
            android:hint="@string/mqtt_username_edit_hint"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/purple_500"
            android:textColorLink="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_mqtt_broker" />

        <EditText
            android:id="@+id/edit_text_mqtt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/primary_text_input"
            android:ems="10"
            android:hint="@string/mqtt_password_edit_hint"
            android:inputType="textPassword"
            android:padding="12dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/purple_500"
            android:textColorLink="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_mqtt_username" />

        <Button
            android:id="@+id/button_connect_disconnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/primary_button"
            android:text="@string/button_connect"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_mqtt_password" />

        <Button
            android:id="@+id/button_start_livestream"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/primary_button"
            android:text="@string/button_start_livestream"
            android:textColor="@color/colorWhite"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_sdk_version" />

        <Button
            android:id="@+id/button_start_control"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/primary_button"
            android:text="@string/button_start_control"
            android:textColor="@color/colorWhite"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_start_livestream" />

        <TextView
            android:id="@+id/text_firmware_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/firmware_default_text"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_connect_disconnect" />

        <TextView
            android:id="@+id/text_sdk_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/sdk_default_text"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_firmware_version"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button_check_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/primary_button"
            android:text="@string/button_check_status"
            android:textColor="@color/colorWhite"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_start_control" />

        <com.cadit.djicamera.utilities.VideoFeedView
            android:id="@+id/video_feed_primary"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_check_status" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>